--- a/src/web/NSE.WebApp.MVC/Views/Catalog/Index.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Catalog/Index.cshtml
@@ -28,12 +28,12 @@
                                     </a>
 
                                     <small class="card-text">
-                                        @product.QuantityInStock<br /><br />
+                                        @this.StockMessage(product.QuantityInStock)<br /><br />
                                         @product.Description
                                     </small>
                                 </figcaption>
                                 <div class="card-footer price mt-1">
-                                    <h3>@product.Value</h3>
+                                    <h3>@this.FormatCurrency(product.Value)</h3>
                                 </div>
                             </div>
                         </div>
