--- a/src/web/NSE.WebApp.MVC/Views/Cart/Index.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Cart/Index.cshtml
@@ -104,29 +104,38 @@
                     <aside class="col-md-3">
                         <div class="card mb-3">
                             <div class="card-body">
-                                <form>
+
+                                <form asp-action="ApplyVoucher">
                                     <div class="form-group">
-                                        <label>Possui um Cupom?</label>
+                                        <label>Possui um Voucher?</label>
+
                                         <div class="input-group">
-                                            <input type="text" class="form-control" name="" placeholder="Cupom Desconto">
+                                            <input type="text" class="form-control" name="VoucherCode" id="VoucherCode" value="@Model.Voucher?.Code" placeholder="Voucher Desconto" />
                                             <span class="input-group-append">
                                                 <button class="btn btn-primary">Aplicar</button>
                                             </span>
                                         </div>
                                     </div>
                                 </form>
+
                             </div>
                         </div>
                         <div class="card">
                             <div class="card-body">
-                                <dl class="dlist-align">
-                                    <dt>Valor Total:</dt>
-                                    <dd class="text-right">@this.FormatCurrency(Model.TotalValue)</dd>
-                                </dl>
-                                <dl class="dlist-align">
-                                    <dt>Desconto:</dt>
-                                    <dd class="text-right">R$ 0,00</dd>
-                                </dl>
+                                @{
+                                    if (Model.UsedVoucher)
+                                    {
+                                        <dl class="dlist-align">
+                                            <dt>Valor Total:</dt>
+                                            <dd class="text-right">@this.FormatCurrency(Model.TotalValue + Model.Discount)</dd>
+                                        </dl>
+                                        <dl class="dlist-align" style="color: green">
+                                            <dt>Desconto:</dt>
+                                            <dd class="text-right">@this.FormatCurrency(Model.Discount)</dd>
+                                        </dl>
+                                    }
+                                }
+
                                 <dl class="dlist-align">
                                     <dt>Total:</dt>
                                     <dd class="text-right  h5">
