feat: Implementação do cadastro e consulta de endereço dos pedidos do cliente

--- a/src/web/NSE.WebApp.MVC/Views/Shared/Components/Summary/Default.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Shared/Components/Summary/Default.cshtml
@@ -8,3 +8,19 @@
         <div style="padding-top: 20px;" asp-validation-summary="All" class="text-danger"></div>
     </div>
 }
+@if (TempData["Errors"] is IEnumerable<string> errors && errors.Any())
+{
+    <div style="padding-top: 15px;"></div>
+
+    <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">x</button>
+        <h3 id="return-message" style="padding-top: 20px;">Opa! Algo deu errado :(</h3>
+
+        <ul>
+            @foreach (var error in errors)
+            {
+                <li>@error</li>
+            }
+        </ul>
+    </div>
+}
