--- a/src/web/NSE.WebApp.MVC/Views/Shared/_Layout.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Shared/_Layout.cshtml
@@ -91,6 +91,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js" type="text/javascript"></script>
     <script src="~/lib/bootstrap/js/bootstrap.bundle.min.js" type="text/javascript"></script>
     <script src="~/js/script.js" type="text/javascript"></script>
+    <script src="~/js/site.js"></script>
 
     @RenderSection("Scripts", required: false)
 </body>
