--- a/src/web/NSE.WebApp.MVC/Views/Order/_FinantialSummary.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Order/_FinantialSummary.cshtml
@@ -6,12 +6,12 @@
         @{
             if (Model.UsedVoucher)
             {
-                <dt class="col-sm-10">Subtotal: <span class="float-right text-muted">@Model.Items.Sum(i => i.Quantity) itens</span></dt>
+                <dt class="col-sm-10">Subtotal: <span class="float-right text-muted">@this.UnityPerProduct(Model.Items.Sum(i => i.Quantity))</span></dt>
                 <dd class="col-sm-2 text-right">
                     <strong>@this.FormatCurrency(Model.TotalValue + Model.Discount)</strong>
                 </dd>
 
-                <dt class="col-sm-10">Desconto: <span class="float-right text-muted">@Model.UsedVoucher</span></dt>
+                <dt class="col-sm-10">Desconto: <span class="float-right text-muted">@Model.VoucherCode</span></dt>
                 <dd class="col-sm-2 text-danger text-right">
                     <strong>@this.FormatCurrency(Model.Discount)</strong>
                 </dd>
