bugfix: Correção na inconsisências no cadastro de novos endereços do cliente

--- a/src/web/NSE.WebApp.MVC/Views/Order/_NewAddress.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Order/_NewAddress.cshtml
@@ -24,9 +24,9 @@
                             <span asp-validation-for="Address.ZipCode" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Address.PublicArea"></label>
-                            <input asp-for="Address.PublicArea" class="form-control" />
-                            <span asp-validation-for="Address.PublicArea" class="text-danger"></span>
+                            <label asp-for="Address.PublicPlace"></label>
+                            <input asp-for="Address.PublicPlace" class="form-control" />
+                            <span asp-validation-for="Address.PublicPlace" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Address.Number"></label>
@@ -39,9 +39,9 @@
                             <span asp-validation-for="Address.Complement" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <label asp-for="Address.Neightborhood"></label>
-                            <input asp-for="Address.Neightborhood" class="form-control" />
-                            <span asp-validation-for="Address.Neightborhood" class="text-danger"></span>
+                            <label asp-for="Address.Neighborhood"></label>
+                            <input asp-for="Address.Neighborhood" class="form-control" />
+                            <span asp-validation-for="Address.Neighborhood" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="Address.City"></label>
