--- a/src/web/NSE.WebApp.MVC/Views/Catalog/Index.cshtml
+++ b/src/web/NSE.WebApp.MVC/Views/Catalog/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using NSE.WebApp.MVC.Extensions
-@model IEnumerable<NSE.WebApp.MVC.Models.Catalog.ProductViewModel>
+@using NSE.WebApp.MVC.Models.Catalog
+@model PagedViewModel<ProductViewModel>
 
 @{
     ViewData["Title"] = "Todos os produtos";
@@ -15,7 +16,7 @@
         <div class="container" style=" padding-top: 20px">
             <div class="row">
                 @{
-                    foreach (var product in Model.OrderBy(p => p.Name))
+                    foreach (var product in Model.List.OrderBy(p => p.Name))
                     {
                         <div class="col-md-3">
                             <div href="#" class="card card-product-grid">
@@ -40,6 +41,29 @@
                     }
                 }
             </div>
+
+            <nav>
+                <ul class="pagination justify-content-center">
+                    @{
+                        for (int i = 1; i < Model.TotalPages + 1; i++)
+                        {
+                            if (i == Model.PageIndex)
+                            {
+                                <li class="page-item active">
+                                    <a class="page-link" asp-action="Index" asp-route-ps="@Model.PageSize" asp-route-page="@i" asp-route-q="@Model.Query">@i</a>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="page-item">
+                                    <a class="page-link" asp-action="Index" asp-route-ps="@Model.PageSize" asp-route-page="@i" asp-route-q="@Model.Query">@i</a>
+                                </li>
+                            }
+                        }
+                    }
+                </ul>
+            </nav>
+
         </div>
     </div>
 </section>
